--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
     "@vitejs/plugin-react": "1.0.4",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.19",
     "typescript": "4.4.4",
     "vite": "2.6.7"
   }
