--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@vitejs/plugin-react": "1.0.4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.19",
+    "tailwindcss": "1.9.6",
     "typescript": "4.4.4",
     "vite": "2.6.7"
   }
