--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-    "scripts": {
-        "start": "vite --open"
-    },
-    "dependencies": {
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "ts-node": "10.3.0"
-    },
-    "devDependencies": {
-        "@types/node": "16.11.0",
-        "@types/react": "17.0.30",
-        "@types/react-dom": "17.0.9",
-        "@vitejs/plugin-react": "1.0.4",
-        "autoprefixer": "^10.4.2",
-        "postcss": "^8.4.6",
-        "tailwindcss": "1.9.6",
-        "typescript": "4.4.4",
-        "vite": "2.6.7"
-    }
+  "scripts": {
+    "start": "vite --open"
+  },
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "ts-node": "10.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "16.11.0",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@vitejs/plugin-react": "1.0.4",
+    "autoprefixer": "10.4.2",
+    "postcss": "8.4.6",
+    "tailwindcss": "1.9.6",
+    "typescript": "5.3.3",
+    "vite": "2.6.7"
+  }
 }
